Set the width of autosuggest menus (Jazz: 566143)     * fixed the z-index of context menus so that it doesn't appear under certain form controls

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,6 +83,7 @@ body.komet_dashboard, body.komet_dashboard .ui-widget, body.komet_dashboard .ui-
     max-height: 140px;
     overflow-y: auto;
     overflow-x: hidden;
+    width: 800px;
 }
 
 // jQuery context-menu override to use glyphicons
